--- a/projecto_1/css/style.css
+++ b/projecto_1/css/style.css
@@ -1,11 +1,32 @@
+html{
+    font-size:  62.5% /*reset para rems*/
+}
+
+/*body*/
+body{
+    font-family "Lato", sans-serif: 
+    font-size: 1.6rem;
+}
 
 /* globales*/
 .contenedor{
-  max-width: 1200px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 120rem;
+  margin: 0 auto;
+  
 }
 
+h1{
+    font-size: 3.8rem;
+}
+h2{
+    font-size: 3.4rem;
+}
+h3{
+    font-size: 3.0rem;
+}
+h4{
+    font-size: 2.6rem;
+}
 
 /*this is style for id, not very used, should not be used several times in the same page
 better to use class */
@@ -14,20 +35,37 @@ better to use class */
   background-position: center center;
   background-size: cover;
   height: 100vh;
-  min height: 600px;
+  min height: 60r em;
 }
+
+.contenido-header{
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.contenido-header h1{
+    color: white;
+    padding-bottom: 2rem;
+    max-width: 60rem;
+    line-height: 2;
+}
+
 .barra{
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding-top: 30px;
+  padding-top: 3rem;
+  max-width: 70rem;    
 }
 
 /*the a letter is for selecting the childre a of class navegasion*/
 .navegacion a{
   color: white;
   text-decoration: none;
-  margin-right: 20px;
+  margin-right: 2rem;
+  font-size:  18px;
 }
 
 .navegacion a:hover{
