--- a/projecto_1/css/style.css
+++ b/projecto_1/css/style.css
@@ -167,8 +167,43 @@ better to use class */
     color: #71b100;
     font-weight: 700;
 }
+.iconos-caracteristicas{
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: space-evenly;
+}
+
+.iconos-caracteristicas li{
+   /* flex: 1; */
+    display: flex;
+}
+
+.iconos-caracteristicas li img{
+    margin-right: 2rem;    
+}
 
 .ver-todas{
     display: flex;
     justify-content: flex-end;
+}
+
+/**contacto home**/
+
+.imagen-contacto{
+    background-image: url(../img/encuentra.jpg);
+    background-position: center center;
+    background-size: cover;
+    height: 40rem;
+    display: flex;
+    align-items: center;
+}
+
+.contenido-contacto{
+    flex: 1;
+    color: white;
+}
+
+.contenido-contacto p{
+    font-size: 1.8rem;
 }
