--- a/projecto_1/css/style.css
+++ b/projecto_1/css/style.css
@@ -344,3 +344,8 @@ better to use class */
     justify-content: space-between;
     align-items: center;
 }
+
+/**Contacto**/
+label{
+    display: block;
+}
