--- a/projecto_1/css/style.css
+++ b/projecto_1/css/style.css
@@ -65,6 +65,10 @@ h4{
     margin-top: 3rem;
     display:  inline-block;
     text-align: center;
+    border: none;
+}
+.boton:hover{
+    cursor: pointer;
 }
 
 .boton-amarillo{
@@ -339,6 +343,12 @@ better to use class */
 }
 
 /**anuncio**/
+form p{
+    font-size: 1.4rem;
+    color: #4f4f4f;
+    margin: 2rem 0 0 0;
+    
+}
 .resumen-propiedad{
     display: flex;
     justify-content: space-between;
@@ -346,6 +356,44 @@ better to use class */
 }
 
 /**Contacto**/
+legend{
+    font-size: 2.4rem;
+    color: #333333;
+}
 label{
+    font-weight: 700;
+    text-transform: uppercase;
     display: block;
+}
+
+input:not([type="submit"]), 
+textarea, 
+select {
+    padding:  1rem;
+    display: block;
+    width: 100%;
+    background-color: #e1e1e1;   
+    margin-bottom: 2rem;
+    border: none;
+    border-radius: 1rem;
+}
+input[type="radio"]{
+    width: auto;
+    margin: 0;
+}
+
+select{
+    -webkit-apperance: none;
+    appearance: none;    
+}
+
+textarea{
+    height: 20rem;
+}
+
+.forma-contacto{
+    max-width: 30rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
