--- a/projecto_2/css/style.css
+++ b/projecto_2/css/style.css
@@ -32,3 +32,45 @@ img{ max-width: 100%;}
 
 /**utilidades**/
 .centrar-texto{text-align: center;}
+.no-margin{margin: 0;}
+
+/**header**/
+.site-header{
+    background-image: url(../img/banner.jpg);
+    background-repeat: no-repeat;
+    background-position: center center;
+    background-size: cover;
+    height: 60rem;
+}
+
+.site-header a{
+    color: white;
+    text-decoration: none;    
+}
+
+.site-header h1{
+    text-align: center;
+    font-weight: 400;
+}
+
+.site-header h2{
+    font-weight: 700;
+}
+
+/**navegacion**/
+.navegacion{
+    text-align: center;
+    display: block;
+    font-size: 1.8rem;
+}
+
+/**texto-header**/
+.texto-header{
+    color: white;
+    text-align: center;
+    margin-top: 5rem;
+}
+
+.texto-header p{
+    font-size: 2.2rem;
+}
